create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -774,6 +774,16 @@ section.lazy-placeholder:after {
 .cid-rBaNaWb3E6 H2 {
   text-align: center;
 }
+.cid-rBaNaWb3E6 DIV {
+  text-align: left;
+}
+.cid-rJi2xCxxfA {
+  background-image: url("../../../assets/images/award-1-2000x1333.jpg");
+}
+.cid-rJi2xCxxfA .mbr-text,
+.cid-rJi2xCxxfA .mbr-section-btn {
+  text-align: left;
+}
 .cid-rBdsPLvLic {
   background-image: url("../../../assets/images/computer-wallpapers-1920x1080.jpg");
 }
