--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -679,6 +679,8 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-rQVMPLH01N {
+  padding-top: 105px;
+  padding-bottom: 90px;
   background-image: url("../../../assets/images/new-1-1024x787.webp");
 }
 .cid-rQVMPLH01N .icons-media-container {
