--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -86,31 +86,6 @@ ol {
 	}
 }
 
-.blog-card {
-	color: var(--foreground-primary);
-	background-color: var(--background-primary);
-	border-radius: 6px;
-
-	margin: 1rem 0.3rem;
-	width: 85vw;
-
-	@include breakpoint(extra_small_devices) {
-		width: 340px !important;
-	}
-
-	animation: scale-in 0.7s cubic-bezier(0.4, 0.46, 0.45, 0.90) both;
-
-	.blog-card-content {
-		.blog-title {
-			font-weight: bold;
-		}
-
-		.blog-description {
-			font-size: 16px;
-		}
-	}
-}
-
 
 .navbar {
 	background-color: var(--background-primary);
@@ -162,5 +137,118 @@ ol {
 
 	p {
 		font-size: 16px;
+	}
+}
+
+
+$n: 20;
+$bgColor: rgb(204,207,209);
+$mountainColor: #433C43;
+$animLength: 6; /* In seconds */
+
+$mountainHeight: 18%; /* In percent */
+
+
+.anim-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: 100%;
+  overflow: hidden;
+  perspective: 400px;
+  &::after {
+    content: '';
+    height: 50%;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    background: $bgColor;
+    opacity: 0.7;
+  }
+}
+.mountain {
+  background-color: $mountainColor;
+  width: $mountainHeight;
+  height: $mountainHeight;
+  position: absolute;
+  top: 50% - $mountainHeight / 2;  
+  &:nth-of-type(even) {
+    right: 0;
+  }
+  &::before {
+    content: '';
+    width: 102%;
+    height: 102%;
+    position: absolute;
+    left: -1%;
+    top: -1%;
+    background: $bgColor;
+    animation: opacity ($animLength + s) linear infinite;
+    animation-delay: inherit;
+  }
+}
+
+@for $i from 1 to $n {
+  .mountain:nth-of-type(#{$i}) {
+    animation: mountain#{($i % 6) + 1} ($animLength + s) (-$i / ($n - 3) * $animLength)+s linear infinite;
+  }
+}
+
+@keyframes mountain1 {
+  0% { transform: rotate(45deg) translate3d(-130%, 130%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(100%, -100%, 0) scale(1); }
+}
+@keyframes mountain2 {
+  0% { transform: rotate(45deg) translate3d(120%, -120%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(-100%, 100%, 0) scale(1); }
+}
+@keyframes mountain3 {
+  0% { transform: rotate(45deg) translate3d(-110%, 110%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(100%, -100%, 0) scale(1); }
+}
+@keyframes mountain4 {
+  0% { transform: rotate(45deg) translate3d(110%, -110%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(-100%, 100%, 0) scale(1); }
+}
+@keyframes mountain5 {
+  0% { transform: rotate(45deg) translate3d(-150%, 150%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(100%, -100%, 0) scale(1); }
+}
+@keyframes mountain6 {
+  0% { transform: rotate(45deg) translate3d(150%, -150%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(-100%, 100%, 0) scale(1); }
+}
+
+@keyframes opacity { 
+  85%, 100% { opacity: 0; } 
+}
+
+
+
+
+
+
+.blog-card {
+	color: var(--foreground-primary);
+	background-color: var(--background-primary);
+	border-radius: 6px;
+
+	margin: 1rem 0.3rem;
+	width: 85vw;
+
+	@include breakpoint(extra_small_devices) {
+		width: 340px !important;
+	}
+	// animation: fade-in 1.9s cubic-bezier(0.1, 0.9, 1.0, 0.1);
+
+	.blog-card-content {
+		padding: 10 10 10 10;
+		.blog-title {
+			font-weight: bold;
+		}
+
+		.blog-description {
+			font-size: 16px;
+		}
 	}
 }
