hashrouter for gh-pages 2

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -120,6 +120,10 @@
 		}
 	}
 
+	.publications {
+		background-color: white !important;
+	}
+
 	#blogging {
 		background-color: var(--background-secondary);
 		padding: 6rem 1.5rem;
