--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 @keyframes scale-in {
 	0% {
 		transform: scale(0);
@@ -7,4 +9,89 @@
 		transform: scale(1);
 		opacity: 1;
 	}
+}
+
+
+
+$n: 20;
+// $bgColor: rgb(204,207,209);
+$bgColor: var(--background-primary);
+$mountainColor: var(--accent);
+$animLength: 9;
+$mountainHeight: 12%; /* In percent */
+
+.play-container {
+  position: flex;
+  width: 100%;
+  height: 0;
+  padding-top: 100%;
+  overflow: hidden;
+  perspective: 800px;
+  z-index: 0;
+  &::after {
+    content: '';
+    height: 50%;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    background: $bgColor;
+    opacity: 0.9;
+	z-index: 5;
+  }
+}
+.mountain {
+  background-color: $mountainColor;
+  width: $mountainHeight;
+  height: $mountainHeight;
+  position: absolute;
+  top: 50% - $mountainHeight / 2;  
+  &:nth-of-type(even) {
+    right: 0;
+  }
+  &::before {
+    content: '';
+    width: 102%;
+    height: 102%;
+    position: absolute;
+    left: -1%;
+    top: -1%;
+    background: $bgColor;
+    animation: opacity ($animLength + s) linear infinite;
+    animation-delay: inherit;
+  }
+}
+
+@for $i from 1 to $n {
+  .mountain:nth-of-type(#{$i}) {
+    animation: mountain#{($i % 6) + 1} ($animLength + s) (-$i / ($n - 3) * $animLength)+s linear infinite;
+  }
+}
+
+@keyframes mountain1 {
+  0% { transform: rotate(45deg) translate3d(-130%, 130%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(100%, -100%, 0) scale(1); }
+}
+@keyframes mountain2 {
+  0% { transform: rotate(45deg) translate3d(120%, -120%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(-100%, 100%, 0) scale(1); }
+}
+@keyframes mountain3 {
+  0% { transform: rotate(45deg) translate3d(-110%, 110%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(100%, -100%, 0) scale(1); }
+}
+@keyframes mountain4 {
+  0% { transform: rotate(45deg) translate3d(110%, -110%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(-100%, 100%, 0) scale(1); }
+}
+@keyframes mountain5 {
+  0% { transform: rotate(45deg) translate3d(-150%, 150%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(100%, -100%, 0) scale(1); }
+}
+@keyframes mountain6 {
+  0% { transform: rotate(45deg) translate3d(150%, -150%, -300px) scale(.5); }
+  100% { transform: rotate(45deg) translate3d(-100%, 100%, 0) scale(1); }
+}
+
+@keyframes opacity { 
+  80%, 100% { opacity: 0.5; } 
 }
