--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,10 @@
 			}
 		}
 	}
+	.name-description {
+		font-size: 20px;
+		white-space: pre-wrap;
+	}
 
 	#about {
 		.about-container {
@@ -24,6 +28,7 @@
 				color: var(--foreground-primary);
 				font-size: 18px;
 				font-weight: normal;
+				white-space: pre-wrap;
 			}
 
 			.tech-stack {
@@ -97,9 +102,8 @@
 
 	#projects {
 		background-color: var(--background-secondary);
-		padding: 6rem 1.5rem;
-
-		transform: skewY(4deg);
+		// padding: 6rem 1.5rem;
+		transform: skewY(3deg);
 
 		.projects-container {
 			display: flex;
@@ -107,7 +111,7 @@
 			justify-content: center;
 			align-items: center;
 
-			transform: skewY(-4deg);
+			transform: skewY(-3deg);
 
 			h1 {
 				color: inherit !important;
@@ -118,10 +122,6 @@
 				margin-bottom: 1rem;
 			}
 		}
-	}
-
-	.publications {
-		width: 90vw;;
 	}
 
 	#blogging {
@@ -142,6 +142,24 @@
 				align-items: center;
 				margin-bottom: 1rem;
 			}
+		}
+	}
+
+	.nomatch {
+		background-color: var(--background-secondary-alt) !important;
+
+		// padding: 6rem 1.5rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		h2 {
+			color: #6fb0fbc4 !important;
+			font-size: 36px;
+			font-weight: bold;
+
+			align-items: center;
+			margin-bottom: 1rem;
 		}
 	}
 }
