--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,7 @@
 
 	--accent: #6484cd;
 	--background-primary: #101012;
-	--background-secondary: #141417;
+	--background-secondary: #1d1d25;
 	--background-secondary-alt: #101012;
 	--foreground-primary: #a8b5c3;
 }
@@ -23,6 +23,7 @@
 }
 
 .reg-text {
+	align-items: center;
 	color: #a8b5c3;
 }
 
