--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -12,6 +12,13 @@
 }
 
 
+.definitions {
+  z-index: 50;
+
+}
+
+
+
 
 $n: 25;
 // $bgColor: rgb(204,207,209);
@@ -37,10 +44,11 @@ $start_scale: 0.4;
     top: 50%;
     background: $bgColor;
     opacity: 0.9;
-	z-index: 5;
+	  z-index: 0;
   }
 }
 .mountain {
+  filter: blur(3px);
   background-color: $mountainColor;
   width: $mountainHeight;
   height: $mountainHeight;
@@ -95,5 +103,5 @@ $start_scale: 0.4;
 }
 
 @keyframes opacity { 
-  80%, 100% { opacity: 0.4; } 
+  90%, 100% { opacity: 0.35; } 
 }
