--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -14,6 +14,43 @@
 	color: var(--foreground-primary) !important;
 }
 
+.s7logo {
+	margin-top: 3px;
+	margin-right: 160px;
+	margin-bottom: 0;
+	margin-left: 5px;
+	height: 30px;
+	filter: drop-shadow(0 0 0.7rem var(--foreground-primary));
+}
+
+.s7img {
+	position: absolute;
+	margin-top: 3px;
+	margin-right: 160px;
+	margin-bottom: 0;
+	margin-left: 5px;
+	height: 35px;
+}
+
+.s7img.main {
+	z-index:2;
+}
+
+.s7img.glow {
+	position: absolute;
+	z-index:1;
+	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	filter: brightness(0) invert(1) blur(5px);
+	-webkit-filter: brightness(0) invert(1) blur(5px);
+	opacity:0;
+	// filter: drop-shadow(0 0 0.8rem var(--foreground-primary));
+}
+.s7img.main:hover ~ .s7img.glow {
+	opacity:1;
+  }
+
+
 a {
 	color: var(--accent);
 	transition: 0.3s ease-in-out;
@@ -115,7 +152,6 @@ ol {
 
 .navbar {
 	background-color: var(--background-primary);
-
 	.navbar-brand,
 	.navbar-menu,
 	.navbar-burger,
@@ -125,10 +161,8 @@ ol {
 		color: var(--foreground-primary);
 	}
 
-	.navbar-start {
-		flex-grow: 1;
-		justify-content: center;
-
+	.navbar-right {
+		align-items: right;
 		.btn-alt {
 			font-weight: bold;
 			background-color: transparent;
@@ -147,9 +181,15 @@ ol {
 			&:hover,
 			&:focus {
 				color: var(--foreground-primary);
-				transform: translateY(0.2rem);
+				transform: translateY(-0.2rem);
 			}
 		}
+	}
+
+	.navbar-start {
+		flex-grow: 1;
+		justify-content: center;
+		margin-left: 160px;
 	}
 
 	.navbar-start,
