--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -153,7 +153,7 @@
 
 	.playback {
 		background-color: var(--background-secondary-alt) !important;
-		height: 850px;
+		height: 800px;
 		// padding: 6rem 1.5rem;
 		display: flex;
 		flex-direction: column;
@@ -165,6 +165,7 @@
 			font-weight: bold;
 			align-items: center;
 			margin-bottom: 1rem;
+			z-index: 10;
 		}
 		h2 {
 			color: #d0e3f9c4 !important;
